--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ nav {
   position: fixed;
   width: 100%;
   z-index: 1000;
+  transition: 0.4s ease-in-out;
 }
 
 #navbar {
@@ -50,6 +51,11 @@ nav {
   font-weight: 500;
   -webkit-font-smoothing: antialiased;
   font-size: 1rem;
+  transition: 0.3s ease-in-out;
+}
+
+#navbar-links a:hover {
+  color: rgb(65, 105, 255);
 }
 
 .blue-button {
@@ -267,4 +273,135 @@ button.add-to-cart {
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
+}
+
+.promo-box {
+  width: 68%;
+  height: 450px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 10px;
+  margin: 50px;
+  overflow: hidden;
+}
+
+.promo-image {
+  background-color: #c7d5f1;
+  display: flex;
+  justify-content: center;
+  place-items: center;
+  padding: 40px;
+  width: 100%;
+}
+
+.promo-image img {
+  width: 70%;
+}
+
+.promo-content {
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  background-color: rgb(65, 105, 225);
+}
+
+.promo-content h1 {
+  color: white;
+  font-size: 1.375rem;
+  font-weight: 500;
+  --webkit-font-smoothing: antialiased;
+}
+
+.promo-content h2 {
+  color: white;
+  font-size: 2.5rem;
+  font-weight: 600;
+  --webkit-font-smoothing: antialiased;
+  margin-bottom: 10px;
+}
+
+.promo-content p {
+  color: white;
+  font-weight: 400;
+  font-size: 1.063rem;
+  margin-bottom: 30px;
+  --webkit-font-smoothing: antialiased;
+}
+
+.promo-content button.white-button {
+  padding: 14px 40px;
+  background-color: white;
+  color: rgb(65, 105, 225);
+  font-size: 1.063rem;
+  font-weight: 600;
+  --webkit-font-smoothing: antialiased;
+  border: 0;
+  border-radius: 30px;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+}
+
+.promo-content button.white-button:hover {
+  color: white;
+  background-color: rgb(15, 46, 138);
+}
+
+/* FOOTER */
+footer {
+  background-color: #d9e5f4;
+  text-align: center;
+  padding: 30px;
+  color: rgb(64, 64, 64);
+}
+
+#footer-top {
+  padding: 20px;
+  width: 60%;
+  margin: auto;
+}
+
+#footer-socials-wrapper {
+  padding: 40px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.footer-social {
+  display: flex;
+  place-items: center;
+}
+
+.footer-social span {
+  margin-left: 20px;
+  font-size: 1rem;
+}
+
+#footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+  border-top: 1px solid rgb(169, 169, 169);
+  padding-top: 30px;
+  margin-top: 20px;
+}
+
+#footer-bottom ul {
+  list-style: none;
+  display: flex;
+}
+
+#footer-bottom a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: rgb(64, 64, 64);
+  transition: 0.3 ease-in-out;
+}
+
+#footer-bottom a:hover {
+  color: rgb(65, 105, 225);
 }
